优化代码不好的习惯